--- a/.github/workflows/sync.yaml
+++ b/.github/workflows/sync.yaml
@@ -18,24 +18,21 @@ jobs:
 
     - name: Add Codeberg remote
       run: |
-        git remote add codeberg https://codeberg.org/emmett1/alicelinux.git
-        git fetch codeberg
+        git clone --depth=1 --branch=clang https://codeberg.org/emmett1/alicelinux.git
 
     - name: Merge changes from Codeberg
       run: |
         git config user.name '󰬭 [CI] '
         git config user.email 'action@github.com'
 
-        git checkout --orphan temp-branch
-        git rm -rf LICENSE README.md .woodpecker.yml .
-        git checkout codeberg/clang -- repos/clang
-        git mv repos/clang/* .
-        git rm -r repos
-        git commit -m "Import changes from Codeberg"
-
-        git checkout master
-        git merge temp-branch --allow-unrelated-histories
-        git branch -D temp-branch
+        rm -rf LICENSE README.md .woodpecker.yml
+        mv ./repos/clang/* .
+        rm -rf ./repos
+        git add .
+        git commit -s -m "sync"
+        
+        #git checkout master
+        #git merge --allow-unrelated-histories codeberg/clang
 
     - name: Push changes to GitHub
       run: |
